--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_JWT_EXPIRATION=5m
 NEXT_PUBLIC_JWT_SECRET= dd5f3089-40c3-403d-af14-d0c228b05cb4
 NEXT_PUBLIC_JWT_REFRESH_TOKEN_SECRET= 7c4c1c50-3230-45bf-9eae-c9b2e401c767
 NEXT_PUBLIC_API_MS_USERS_URL=https://bs21rug0q5.execute-api.us-east-1.amazonaws.com
+NEXT_PUBLIC_API_HOST=http://localhost:3001
